Fix wrapping of options on state/category filters
For #23.

--- a/web/cobrands/smidsy/layout.scss
+++ b/web/cobrands/smidsy/layout.scss
@@ -207,13 +207,11 @@ body.mappage {
     border-bottom: 1px solid mix(#ccc, $color-neutral-raincloud);
 
     label {
-        display: inline;
         margin: 0;
         color: $color-neutral-slategrey;
         font-weight: normal;
 
         input {
-            margin-left: 10px; // line up with the report icons in the list underneath
             margin-right: 0.2em;
             vertical-align: 1px;
         }
